--- a/app/src/main/res/layout/fragment_onboadring.xml
+++ b/app/src/main/res/layout/fragment_onboadring.xml
@@ -19,12 +19,12 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/android_mascot"
         android:src="@drawable/ic_android_white_24dp"
         app:layout_constraintBottom_toBottomOf="@+id/playerView"
         app:layout_constraintEnd_toEndOf="@+id/playerView"
         app:layout_constraintStart_toStartOf="@+id/playerView"
-        app:layout_constraintTop_toTopOf="@+id/playerView"
-        android:contentDescription="@string/android_mascot" />
+        app:layout_constraintTop_toTopOf="@+id/playerView" />
 
     <ImageButton
         android:id="@+id/volumeControlButton"
@@ -33,16 +33,53 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@string/volume_button_image"
         android:src="@drawable/ic_volume_off_white_24dp"
         app:layout_constraintEnd_toEndOf="@+id/playerView"
-        app:layout_constraintTop_toTopOf="@+id/playerView"
-        android:contentDescription="@string/volume_button_image" />
+        app:layout_constraintTop_toTopOf="@+id/playerView" />
 
     <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
         android:layout_width="0dp"
         android:layout_height="100dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/playerView" />
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/onboardingTextTabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/onboarding_dot_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewPager"
+        app:tabBackground="@drawable/bg_onboarding_dot_normal"
+        app:tabGravity="center"
+        app:tabIndicator="@drawable/bg_onboarding_dot_indicator"
+        app:tabIndicatorColor="#000000"
+        app:tabIndicatorGravity="center"
+        app:tabMaxWidth="18dp"
+        app:tabMinWidth="18dp" />
+
+    <Button
+        android:id="@+id/signInButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:text="@string/onboarding_sign_in_button_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/onboardingTextTabLayout"
+        android:layout_marginTop="20dp"/>
+
+    <Button
+        android:id="@+id/signUpButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:text="@string/onboarding_sign_up_button_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signInButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
