--- a/app/src/main/res/layout/fragment_onboadring.xml
+++ b/app/src/main/res/layout/fragment_onboadring.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:ignore="ScrollViewSize">
 
         <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/playerView"
@@ -75,7 +77,8 @@
             android:text="@string/onboarding_sign_in_button_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/onboardingTextTabLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/onboardingTextTabLayout"
+            android:layout_marginTop="48dp"/>
 
         <Button
             android:id="@+id/signUpButton"
