--- a/app/src/main/res/layout/fragment_onboadring.xml
+++ b/app/src/main/res/layout/fragment_onboadring.xml
@@ -72,11 +72,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="24dp"
-            android:layout_marginBottom="48dp"
             android:text="@string/onboarding_sign_in_button_text"
+            android:backgroundTint="@color/brand_orange"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/onboardingTextTabLayout"
+            app:layout_constraintBottom_toTopOf="@+id/signUpButton"
             android:layout_marginTop="48dp"/>
 
         <Button
@@ -85,9 +85,12 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="24dp"
             android:text="@string/onboarding_sign_up_button_text"
+            style="@style/Widget.OurAwesomeApp.SecondaryButton"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/signInButton" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="24dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
