--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -70,6 +70,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
+        style="@style/Widget.OurAwesomeApp.PrimaryButton"
         android:layout_marginBottom="48dp"
         android:text="@string/sign_in_sign_in_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
